fixes image resize on smaller windows

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 
 body {
-  background: #ffffff;
+  background: #ffffff;  
   font-size: 16px;
   line-height: 1.25em;
   margin: 2em auto 4em auto;
@@ -15,9 +15,9 @@ body {
 
 
 h1 {
-  color: #121212;
-  font-size: 3em;
-  font-weight: 500;
+  color: #121212;  
+  font-size: 3em;  
+  font-weight: 500;  
   /*letter-spacing: 0.125em;*/
   line-height: 1.125em; 
   margin: 1em 0 0.25em 0;
@@ -91,9 +91,9 @@ a:not(:hover) {
 .postimg {
   border: solid 2px lightgray;
   margin: 0 0 0.5em 0;
-  height: 140px;
-  /*width: 720px;*/
-  width: 75%;
+  height: 135px;
+  width: 720px;
+  /*width: 100%;*/
   object-fit: cover; 
 }
 
